# aiogram_order_bot

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: bot.Dockerfile  postgres.Dockerfile
src/alembic/: env.py
src/bot/: __main__.py  config.py
src/bot/db/: __init__.py  base.py  models.py
src/bot/filters/: admin.py
src/bot/handlers/: __init__.py  start.py
src/bot/keyboards/: reply.py
src/bot/services/: broadcaster.py
