[tool.poetry]
name = "aiogram_order_bot"
version = "0.0.1"
description = "a bot for a queue of people"
authors = ["hoopengo <hoopengo@yandex.ru>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = { version = "^3.15.0" }
pydantic-settings = "^2.0.2"
betterlogging = "^1.0.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.19" }
alembic = "^1.11.1"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
